--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier \"{app,lib,components,config,hooks}/**/*.{ts,tsx,md}\" --ignore-path .gitignore",
+    "format": "prettier \"{app,lib,components,config,hooks, actions, db,types}/**/*.{ts,tsx,md}\" --ignore-path .gitignore",
     "format:write": "bun format --write",
     "format:check": "bun format --check",
     "check-types": "tsc --noEmit --pretty",
@@ -15,6 +15,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@electric-sql/pglite": "^0.3.0",
+    "@electric-sql/pglite-react": "^0.2.18",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^9.7.0",
     "@tailwindcss/postcss": "^4",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
@@ -53,6 +56,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
+    "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
   }
