--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@electric-sql/pglite": "^0.3.0",
     "@electric-sql/pglite-react": "^0.2.18",
+    "@hookform/resolvers": "^5.0.1",
     "@next/env": "^15.3.1",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
@@ -27,10 +28,12 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tanstack/react-query": "^5.75.1",
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.6",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,16 +41,19 @@
     "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.505.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "nextjs-cors": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
     "supertokens-auth-react": "^0.49.1",
     "supertokens-node": "^22.1.0",
     "supertokens-web-js": "^0.15.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -55,6 +61,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/figlet": "^1.7.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
