--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.505.0",
+    "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "nextjs-cors": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "recharts": "^2.15.3",
     "supertokens-auth-react": "^0.49.1",
     "supertokens-node": "^22.1.0",
     "supertokens-web-js": "^0.15.0",
@@ -66,6 +67,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^2.0.1",
     "chalk": "^5.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
