--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
@@ -48,13 +49,16 @@
     "next-themes": "^0.4.6",
     "nextjs-cors": "^2.2.0",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
     "supertokens-auth-react": "^0.49.1",
     "supertokens-node": "^22.1.0",
     "supertokens-web-js": "^0.15.0",
     "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
